Plots for slides

--- a/GW_project.ipynb
+++ b/GW_project.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -100,6 +100,9 @@
     "# -- Set a GPS time:\n",
     "t0 = 1187008882.4  # GW170817 - the neutron star merger\n",
     "\n",
+    "# -- Set a GPS time:\n",
+    "#t0 = 1185389807.3  # GW170729 - the most massive chirp\n",
+    "\n",
     "#1180922494.5 # --GW170608\n",
     "\n",
     "#-- Choose detector as H1, L1, or V1\n",
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -228,7 +231,7 @@
        "(1187008882.2, 1187008882.5)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -259,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -305,7 +308,7 @@
     "ax = fig4.gca()\n",
     "fig4.colorbar(label=\"Normalised energy\")\n",
     "ax.grid(False)\n",
-    "ax.set_yscale('log')"
+    "ax.set_yscale('log')\n"
    ]
   },
   {
